objects/DecsOnD__AssignmentBizHours__c.object
<CustomObject>
    <fields>
        <fullName>DecsOnD__Business_Hours__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Hours</label>
        <referenceTo>BusinessHours</referenceTo>
        <relationshipName>User_Business_Hours</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DecsOnD__User_Unique_Hidden__c</fullName>
        <description>Hidden field used to enforce the rule that we can only have one business hours record per user</description>
        <label>User Unique Hidden</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DecsOnD__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_Business_Hours</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Assignment Business Hours</label>
    <listViews>
        <fullName>DecsOnD__All</fullName>
        <columns>NAME</columns>
        <columns>DecsOnD__User__c</columns>
        <columns>DecsOnD__Business_Hours__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>DecsOnD__AllAll</fullName>
        <columns>NAME</columns>
        <columns>DecsOnD__User__c</columns>
        <columns>DecsOnD__Business_Hours__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ABH-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assignment Business Hours</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>DecsOnD__User_and_business_hours_are_required</fullName>
        <active>true</active>
        <description>Both a user and a business hours record are required</description>
        <errorConditionFormula>ISBLANK(DecsOnD__User__c) ||  ISBLANK(DecsOnD__Business_Hours__c )</errorConditionFormula>
        <errorMessage>You must enter both a user and a business hours record</errorMessage>
    </validationRules>
</CustomObject>